// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppList /> expect to render 1`] = `
<div
  styleName="AppList"
>
  <div
    styleName="AppList__Header"
  >
    <p
      styleName="AppList__Stat"
    >
      <span
        styleName="AppList__StatHits"
      >
        500
         results 
      </span>
      <span>
        found in 
      </span>
      <span
        styleName="AppList__StatTime"
      >
        5
        ms
      </span>
    </p>
  </div>
  <ul
    styleName="AppList__Content"
  >
    <AppItem
      _highlightResult={
        Object {
          "name": Object {
            "value": "__algolia__highlight__pre__tag__Cut the__algolia__highlight__post__tag__ Rope",
          },
        }
      }
      image="http://image.com"
      link="http://link.com"
      name="Cut the Rope"
      price="0 $"
      rating={3}
      ratingCount={1234}
    />
    <AppItem
      _highlightResult={
        Object {
          "name": Object {
            "value": "Angry Birds",
          },
        }
      }
      image="http://image.com"
      link="http://link.com"
      name="Angry Birds"
      price="0 $"
      rating={5}
      ratingCount={6789}
    />
  </ul>
</div>
`;

exports[`<AppList /> expect to render on initial load 1`] = `
<div
  styleName="AppList"
>
  <div
    styleName="AppList__Header"
  />
  <ul
    styleName="AppList__Content"
  >
    <AppItem
      _highlightResult={
        Object {
          "name": Object {
            "value": "__algolia__highlight__pre__tag__Cut the__algolia__highlight__post__tag__ Rope",
          },
        }
      }
      image="http://image.com"
      link="http://link.com"
      name="Cut the Rope"
      price="0 $"
      rating={3}
      ratingCount={1234}
    />
    <AppItem
      _highlightResult={
        Object {
          "name": Object {
            "value": "Angry Birds",
          },
        }
      }
      image="http://image.com"
      link="http://link.com"
      name="Angry Birds"
      price="0 $"
      rating={5}
      ratingCount={6789}
    />
  </ul>
</div>
`;
